# ReSet-Doc

./: .gitignore  ;  CI.typ  README.md  ReSet.typ  Untitled-1.yml  abstract.txt  api.typ  bib.yml  daemon.typ  dbus.typ  documentation.typ  existing_systems.typ  interpreted_languages.typ  meeting.typ  template.typ  ui_design.typ  ui_implementation.typ  ui_tests.typ  utils.typ  works.yml
any_pattern/: Cargo.toml
defense/: ReSetPresentation.pdfpc  ReSetPresentation.typ  figures  utils.typ
dylib_loading/: Cargo.toml  c_test.c
examples/steel_example/: Cargo.toml  shell.nix
examples/steel_example/src/: main.rs
figures/: .monitor-resize.autosave.xopp  monitor-axis.xopp  monitor-overlap.xopp  monitor-resize.xopp
files/: .xournal_designs.autosave.xopp  ReSet Feedback Test.csv  ReSet Mock UI Test.csv  ReSet.cmb  architecture.txt  bib.yml  bibliography.yml  dbus_sequence.txt  domain_model.txt  domain_model2.txt  dynamic_libraries.txt  font.txt  ganntTimePlanning.gantt  generate.sh  global_offset_table.txt  hourglass.txt  interpreted_languages.txt  mock_implementation.txt  plugin_integration_test.txt  poster.txt  reset.ui  timeplanning.gantt  uimock.xopp  wayland_architecture.txt  wifi_architecture.txt  xournal_designs.xopp
function_overriding/: Cargo.toml
intermediaryPresentation/: ReSetPresentation.pdfpc  ReSetPresentation.typ  figures  utils.typ
sections/: Prelude.typ  abstract.typ  comparison.typ  conclusion.typ  distribution.typ  exemplary_plugin_results.typ  existing_plugin_functionality.typ  existing_systems.typ  implementation.typ  introduction.typ  (+6 more)
(+90 files in other folders)
