[package]
name = "steel_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
steel-core = "0.5.0"
steel-interpreter = "0.5.0"
glib = "0.19.3"
once_cell = "1.19.0"

[toolchain]
channel = "stable-2024-11-16"
